--- a/app/views/users/admins/meetings/new.html.erb
+++ b/app/views/users/admins/meetings/new.html.erb
@@ -1,9 +1,10 @@
 <h1>Users::Admins::Meetings#new</h1>
 <h2>New Meeting</h2>
-
-<%= form_for :meeting, url: users_admins_meetings_url do |f| %>
-<%= render partial: 'users/shared/forms', locals: {f: f} %>
-<% end %>
+<div class='form' />
+  <%= form_for :meeting, url: users_admins_meetings_url do |f| %>
+  <%= render partial: 'users/shared/forms', locals: {f: f} %>
+  <% end %>
+</div>
 <% if user_signed_in? %>
   <li>
   <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
