--- a/app/views/users/admins/meetings/index.html.erb
+++ b/app/views/users/admins/meetings/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'shared/navbar' %>
 <h1 >Listing Meetings</h1>
 <div class="table-responsive">
   <table class="table">
@@ -31,16 +32,3 @@
   </table>
 </div>
 <br>
-
-
-
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-<% end %>
-
