--- a/app/views/users/employees/meetings/index.html.erb
+++ b/app/views/users/employees/meetings/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Users::Employees::Meetings#index</h1>
-<p>Find me in app/views/users/employees/meetings/index.html.erb</p>
+<%= render partial: 'shared/navbar' %>
 <h1>Listing Meetings</h1>
 <div class="table-responsive">
   <table class="table">
@@ -33,14 +32,3 @@
   </table>
 </div>
 <br>
-
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-<% end %>
-
