--- a/app/views/users/employees/meetings/new.html.erb
+++ b/app/views/users/employees/meetings/new.html.erb
@@ -1,15 +1,5 @@
-<h1>Users::Employees::Meetings#new</h1>
+<%= render partial: 'shared/navbar' %>
 <h2>New Meeting</h2>
-
 <%= form_for :meeting, url: users_employees_meetings_url do |f| %>
 <%= render partial: 'users/shared/forms', locals: {f: f} %>	
-<% end %>
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
 <% end %>
