--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'shared/navbar' %>
 <h1>----------- Update Venue ------------ </h1>
 <%= form_for :venue, url: venue_path, method: 'patch' do |f| %>
   <p>
