--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,4 +1,4 @@
-
+<%= render partial: 'shared/navbar' %>
 <h1>----------- New Venue ------------ </h1>
 <%= form_for :venue, url: venues_path do |f| %>
   <p>
