--- a/app/views/users/employees/meetings/index.html.erb
+++ b/app/views/users/employees/meetings/index.html.erb
@@ -27,6 +27,7 @@
       <td><%= meeting.organiser.name %></td>
       <td><%= link_to "Edit", edit_users_employees_meeting_url(meeting) %></td>
       <td><%= link_to "Remove", users_employees_meeting_path(meeting.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
+      <td><%= link_to "Add agenda", new_agenda_url(mom_id: meeting.mom.id)  %></td>
     </tr>
   <% end %>
   </table>
