--- a/app/views/agendas/edit.html.erb
+++ b/app/views/agendas/edit.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: 'shared/navbar' %>
 <h1>Agenda Edit</h1>
+<%= @agenda.mom %>
 <%= form_for @agenda, url: agenda_path, method: 'patch' do |f| %>
 <%= hidden_field_tag "agenda[mom_id]", "#{@agenda.mom.id}" %>
 <%= render partial: 'agendas/forms', locals: {f: f} %>  
