remove_members functionality added in meeting

--- a/app/views/users/employees/meetings/index.html.erb
+++ b/app/views/users/employees/meetings/index.html.erb
@@ -29,6 +29,7 @@
       <td><%= link_to "Remove", users_employees_meeting_path(meeting.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
       <td><%= link_to "Add agenda", new_agenda_url(mom_id: meeting.mom.id) %></td>
       <td><%= link_to "Add Members", add_members_users_employees_meeting_url(meeting) %></td>
+      <td><%= link_to "Remove Members", remove_members_users_employees_meeting_url(meeting) %></td>
     </tr>
   <% end %>
   </table>
