changed model to mongodb from mysql

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= f.label :Type %><br />
-    <%= f.select :type, options_for_select({'Admin': 'User::Admin','Employee': 'User::Employee' }) %>
+    <%= f.select :_type, options_for_select({'Admin': 'User::Admin','Employee': 'User::Employee' }) %>
   </div>
 
   <div class="actions">
