--- a/app/views/users/employees/meetings/index.html.erb
+++ b/app/views/users/employees/meetings/index.html.erb
@@ -18,9 +18,9 @@
       <th>Add Members</th>
       <th>Remove Members</th>
     </tr>
-
   <% @past_meetings.each do |meeting| %>
     <tr>
+    <% byebug %>
       <td><%= meeting.id %></td>
       <td><%= meeting.key_note %></td>
       <td><%= meeting.status %></td>
