CRUD operation for venue by marionette done

--- a/app/assets/templates/venue.jst.ejs
+++ b/app/assets/templates/venue.jst.ejs
@@ -1,6 +1,6 @@
-<td><%= venue.name %></td>
-<td><%= venue.address %></td>
-<td><%= venue.capacity %></td>
-<td><%= venue.status %></td>
-<td class="edit", data-id='<%= venue._id %>' >edit</td>
-<td class="delete", data-id='<%= venue._id %>'>delete</td>
+<td><%= name %></td>
+<td><%= address %></td>
+<td><%= capacity %></td>
+<td><%= status %></td>
+<td class="edit", data-id='<%= _id %>' >edit</td>
+<td class="delete", data-id='<%= _id %>'>delete</td>
